worker/kube/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker
  labels:
    app: worker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: worker
  template:
    metadata:
      labels:
        app: worker
    spec:
      containers:
      - name: worker
        image: localhost:5000/worker:latest
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: "100m"
        volumeMounts:
        - name: config-volume
          mountPath: /app/config
      volumes:
      - name: config-volume
        configMap:
          name: worker
          items:
          - key: config.yml
            path: config.yml
