worker/kube/service.yml
kind: Service
apiVersion: v1
metadata:
  name: worker
spec:
  selector:
    app: worker
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
    name: http
